MAE-493: Fix alignment of the batch table actions buttons

--- a/scss/civicrm/common/_buttons.scss
+++ b/scss/civicrm/common/_buttons.scss
@@ -113,6 +113,12 @@ $button-border-radius: 2px;
     }
   }
 
+  .crm-form-select {
+    + .crm-button {
+      float: none;
+    }
+  }
+
   .crm-form-xbutton,
   .crm-submit-buttons {
     height: auto;
